<?xml version="1.0"?>
<package format="3">
  <name>fast_lio</name>
  <version>2.0.0</version>
  <description>FAST-LIO porting baseline for ROS 2 Jazzy on Ubuntu 24.04.</description>

  <maintainer email="dev@livoxtech.com">claydergc</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend>

  <build_depend>eigen</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
